Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,12 +14,11 @@ jobs:
         vmImage: 'Ubuntu-16.04'
 
       steps:
-        - displayName: 'Helm init'
-          task: HelmDeploy@0
+        - task: HelmDeploy@0
+          displayName: 'Helm init'
           inputs:
-            azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
-            azureResourceGroup: $(azureResourceGroup)
-            kubernetesCluster: $(kubernetesCluster)
+            connectionType: Kubernetes Service Connection
+            kubernetesServiceEndpoint: 'gke_focal-freedom-236620_asia-southeast1_lkrcal-6809978de35e5bad'
             command: init
             upgradetiller: true
             waitForExecution: true
