--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
             kubernetesServiceEndpoint: $(kubernetesConnection)
             namespace: $(kubernetesNamespace)
             command: delete
-            arguments: '--purge $(helmReleaseName)''
+            arguments: '--purge $(helmReleaseName)'
 #        - displayName: 'Bootstrap required tools'
 #          script: ./script/bootstrap.sh
 #        - displayName: 'Check Kubernetes Cluster'
