Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ jobs:
             connectionType: Kubernetes Service Connection
             kubernetesServiceEndpoint: 'gke_focal-freedom-236620_asia-southeast1_lkrcal-6809978de35e5bad'
             namespace: $(kubernetesNamespace)
-            command: init
+            command: install
             chartType: FilePath
             chartPath: iofog
             releaseName: $(helmReleaseName)
