--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,8 @@ jobs:
             kubernetesServiceEndpoint: 'gke_focal-freedom-236620_asia-southeast1_lkrcal-6809978de35e5bad'
             command: get
             arguments: crd iofogs.k8s.iofog.org
+            KubectlOutput: 'KUBECTL_GET_CRD'
+        - bash: echo $(KUBECTL_GET_CRD)
         - task: HelmDeploy@0
           displayName: 'Helm install ioFog'
           inputs:
