--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,9 @@ jobs:
             command: get
             arguments: crd iofogs.k8s.iofog.org
             KubectlOutput: 'KUBECTL_GET_CRD'
-        - bash: echo $(KUBECTL_GET_CRD)
+        - bash: echo $KUBECTLOUTPUT
+        - bash: echo $MYVAR_KUBECTLOUTPUT
+        - bash: echo $(KUBECTLOUTPUT)
         - task: HelmDeploy@0
           displayName: 'Helm install ioFog'
           inputs:
